frontend/app-android-delivery/out.txt
WARNING: We recommend using a newer Android Gradle plugin to use compileSdk = 36

This Android Gradle plugin (8.1.1) was tested up to compileSdk = 34.

You are strongly encouraged to update your project to use a newer
Android Gradle plugin that has been tested with compileSdk = 36.

If you are already using the latest version of the Android Gradle plugin,
you may need to wait until a newer version with support for compileSdk = 36 is available.

To suppress this warning, add/update
    android.suppressUnsupportedCompileSdk=36
to this project's gradle.properties.
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac FAILED
C:\Users\User\WorkStation\FoodDeliveryAndIntegratedStoreManagementSystem\frontend\app-android-delivery\app\src\main\java\com\fooddelivery\delivery\ActiveDeliveryFragment.java:13: error: cannot find symbol
        return inflater.inflate(R.layout.fragment_active_delivery, container, false);
                                        ^
  symbol:   variable fragment_active_delivery
  location: class layout
C:\Users\User\WorkStation\FoodDeliveryAndIntegratedStoreManagementSystem\frontend\app-android-delivery\app\src\main\java\com\fooddelivery\delivery\HistoryFragment.java:13: error: cannot find symbol
        return inflater.inflate(R.layout.fragment_history, container, false);
                                        ^
  symbol:   variable fragment_history
  location: class layout
C:\Users\User\WorkStation\FoodDeliveryAndIntegratedStoreManagementSystem\frontend\app-android-delivery\app\src\main\java\com\fooddelivery\delivery\MainActivity.java:23: error: cannot find symbol
            if (id == R.id.nav_active) {
                          ^
  symbol:   variable nav_active
  location: class id
C:\Users\User\WorkStation\FoodDeliveryAndIntegratedStoreManagementSystem\frontend\app-android-delivery\app\src\main\java\com\fooddelivery\delivery\MainActivity.java:25: error: cannot find symbol
            } else if (id == R.id.nav_history) {
                                 ^
  symbol:   variable nav_history
  location: class id
C:\Users\User\WorkStation\FoodDeliveryAndIntegratedStoreManagementSystem\frontend\app-android-delivery\app\src\main\java\com\fooddelivery\delivery\MainActivity.java:44: error: cannot find symbol
            bottomNav.setSelectedItemId(R.id.nav_active);
                                            ^
  symbol:   variable nav_active
  location: class id
5 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 992ms
14 actionable tasks: 1 executed, 13 up-to-date
